--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- pararaph text 'PUBLISHED BY...' -->
         <p>PUBLISHED BY</P>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-        <span>PHARELLWILLIAMS.COM</span>
+        <span>PHARRELLWILLIAMS.COM</span>
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
